--- a/healthmoney_dashboard_vite/package.json
+++ b/healthmoney_dashboard_vite/package.json
@@ -14,7 +14,8 @@
     "react-big-calendar": "^1.19.4",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.0",
-    "recharts": "^2.10.3"
+    "recharts": "^2.15.4",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
